[gd_scene load_steps=11 format=2]

[ext_resource path="res://PetRock.png" type="Texture" id=1]
[ext_resource path="res://DreamRock.gd" type="Script" id=2]
[ext_resource path="res://Sparkle1Small.png" type="Texture" id=3]
[ext_resource path="res://PolishingShort.wav" type="AudioStream" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.019776 ), 0.0, 0.485147, 0, 0, Vector2( 0.474684, 0.862108 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00159407 ), -0.345434, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 60, 30, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "MouseOver"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DreamRockSprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.01, 1.01 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DreamRockSprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Polish"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DreamRockSprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -2.0, 0.0, 2.0 ]
}

[node name="DreamRock" type="Area2D"]
position = Vector2( 510.908, 462.663 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="DreamRockSprite2" type="Sprite" parent="."]
rotation = -0.0349066
texture = ExtResource( 1 )

[node name="DreamRockShape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 17, -52.9, 17, -51.5, 61, -38.5, 61, -37.1, 67, -33.1, 67, -28, 69.5, -19, 73.9, -19, 84, -7.8, 84, 0, 85.3, 10, 83.4, 10, 80.7, 16.7, 84.9, 28, 81.8, 28, 65.7, 41, 63.5, 41, 49.5, 48, 43.8, 48, 26.8, 44.5, 9, 50.8, 9, 48.8, -27, 43.7, -27, 41.8, -27.8, 41, -36.5, 41, -45, 45.2, -45, 41.8, -52.8, 34, -54.2, 34, -66, 31.6, -66, 29.5, -69.3, 23, -69.9, 23, -86, 5.8, -86, 0.300003, -77, -10.7, -77, -13.2, -73.6, -29, -72, -29, -65, -38, -61.5, -38, -39.5, -51, -36.1, -51, -7, -52.9, -7, -54.1 )

[node name="AttentionStateLabel" type="Label" parent="."]
margin_left = -49.4971
margin_top = -89.4309
margin_right = 65.5029
margin_bottom = -75.4309
text = "Healthy and loved"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeSinceLastPet" type="Label" parent="."]
visible = false
margin_left = -11.0496
margin_top = 66.2978
margin_right = 28.9504
margin_bottom = 80.2978
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sparkle" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 1
explosiveness = 0.27
randomness = 0.38
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="PolishSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MouseOverAnimations" type="AnimationPlayer" parent="."]
anims/MouseOver = SubResource( 5 )

[node name="PolishAnimations" type="AnimationPlayer" parent="."]
anims/Polish = SubResource( 6 )

[node name="DreamRockHighlight" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 1 )
energy = 0.5
[connection signal="mouse_entered" from="." to="." method="_on_DreamRock_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DreamRock_mouse_exited"]
